--- a/OfflineMapBook/OfflineMapBook/app.config
+++ b/OfflineMapBook/OfflineMapBook/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="OfflineMapBook.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -8,4 +13,23 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <OfflineMapBook.Properties.Settings>
+      <setting name="MmpkDownloadDate" serializeAs="String">
+        <value>1900-01-02</value>
+      </setting>
+      <setting name="MmpkFileName" serializeAs="String">
+        <value>OfflineMapbookTest.mmpk</value>
+      </setting>
+      <setting name="PortalUri" serializeAs="String">
+        <value>https://rpubs120027.ags.esri.com/portal/sharing/rest</value>
+      </setting>
+      <setting name="PortalItemID" serializeAs="String">
+        <value>ea8f987ac8bb429ebcfc773c6eb6cabf</value>
+      </setting>
+      <setting name="DownloadPath" serializeAs="String">
+        <value />
+      </setting>
+    </OfflineMapBook.Properties.Settings>
+  </userSettings>
 </configuration>
