--- a/OfflineMapBook/OfflineMapBook/app.config
+++ b/OfflineMapBook/OfflineMapBook/app.config
@@ -25,10 +25,13 @@
         <value>https://rpubs120027.ags.esri.com/portal/sharing/rest</value>
       </setting>
       <setting name="PortalItemID" serializeAs="String">
-        <value>769c9e16b2ed43dbbd2d95b43ae3d54c</value>
+        <value>700c2669976749d6abb323743256f6ae</value>
       </setting>
       <setting name="DownloadPath" serializeAs="String">
         <value />
+      </setting>
+      <setting name="MapPinHeight" serializeAs="String">
+        <value>30</value>
       </setting>
     </OfflineMapBook.Properties.Settings>
   </userSettings>
