--- a/OfflineMapBook/OfflineMapBook/app.config
+++ b/OfflineMapBook/OfflineMapBook/app.config
@@ -22,16 +22,31 @@
         <value>OfflineMapbookTest.mmpk</value>
       </setting>
       <setting name="PortalUri" serializeAs="String">
-        <value>https://rpubs120027.ags.esri.com/portal/sharing/rest</value>
+        <value>http://runtime.maps.arcgis.com/sharing/rest</value>
       </setting>
       <setting name="PortalItemID" serializeAs="String">
-        <value>700c2669976749d6abb323743256f6ae</value>
+        <value>5ca1aba9eb05490f84b66bf9bbe4cc10</value>
       </setting>
       <setting name="DownloadPath" serializeAs="String">
         <value />
       </setting>
       <setting name="MapPinHeight" serializeAs="String">
         <value>30</value>
+      </setting>
+      <setting name="AuthenticationType" serializeAs="String">
+        <value>OAuth</value>
+      </setting>
+      <setting name="OAuthClientID" serializeAs="String">
+        <value>fibBFbcGmC5Tyk7r</value>
+      </setting>
+      <setting name="OAuthClientSecret" serializeAs="String">
+        <value>8dda995e9c094c199418ee73ff0338aa</value>
+      </setting>
+      <setting name="OAuthRedirectUri" serializeAs="String">
+        <value>https://developers.arcgis.com</value>
+      </setting>
+      <setting name="OAuthRefreshToken" serializeAs="String">
+        <value />
       </setting>
     </OfflineMapBook.Properties.Settings>
   </userSettings>
