--- a/OfflineMapBook/OfflineMapBook/packages.config
+++ b/OfflineMapBook/OfflineMapBook/packages.config
@@ -2,6 +2,5 @@
 <packages>
   <package id="Esri.ArcGISRuntime.Toolkit" version="100.0.0-beta1" targetFramework="net452" />
   <package id="Esri.ArcGISRuntime.Toolkit.WPF" version="100.0.0-beta1" targetFramework="net452" />
-  <package id="Esri.ArcGISRuntime.WPF" version="100.1.0-daily1726" targetFramework="net452" />
-  <package id="StyleCop.Analyzers" version="1.1.0-beta001" targetFramework="net452" developmentDependency="true" />
+  <package id="Esri.ArcGISRuntime.WPF" version="100.1.0" targetFramework="net452" />
 </packages>
