--- a/OfflineMapBook/OfflineMapBook/packages.config
+++ b/OfflineMapBook/OfflineMapBook/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Esri.ArcGISRuntime.Toolkit" version="100.1.0-beta2" targetFramework="net452" />
-  <package id="Esri.ArcGISRuntime.Toolkit.WPF" version="100.1.0-beta2" targetFramework="net452" />
-  <package id="Esri.ArcGISRuntime.WPF" version="100.1.0" targetFramework="net452" />
+  <package id="Esri.ArcGISRuntime.Toolkit.WPF" version="100.2.0-beta3.42.g654578e5e6" targetFramework="net452" />
+  <package id="Esri.ArcGISRuntime.WPF" version="100.2.0" targetFramework="net452" />
 </packages>
