Update Offline Mapbook for latest RT & toolkit

--- a/OfflineMapBook/OfflineMapBook/packages.config
+++ b/OfflineMapBook/OfflineMapBook/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Esri.ArcGISRuntime.Toolkit.WPF" version="100.2.0-beta3.42.g654578e5e6" targetFramework="net452" />
-  <package id="Esri.ArcGISRuntime.WPF" version="100.2.0" targetFramework="net452" />
+  <package id="Esri.ArcGISRuntime" version="100.4.0" targetFramework="net461" />
+  <package id="Esri.ArcGISRuntime.Toolkit" version="100.4.0" targetFramework="net461" />
+  <package id="Esri.ArcGISRuntime.Toolkit.Preview" version="100.4.0" targetFramework="net461" />
+  <package id="Esri.ArcGISRuntime.WPF" version="100.4.0" targetFramework="net461" />
 </packages>
