Update packages to 100.5

--- a/OfflineMapBook/OfflineMapBook/app.config
+++ b/OfflineMapBook/OfflineMapBook/app.config
@@ -1,15 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="OfflineMapBook.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="OfflineMapBook.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Esri.ArcGISRuntime" publicKeyToken="8fc3cc631e44ad86" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-100.1.0.0" newVersion="100.1.0.0"/>
+        <assemblyIdentity name="Esri.ArcGISRuntime" publicKeyToken="8fc3cc631e44ad86" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-100.5.0.0" newVersion="100.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -28,7 +28,7 @@
         <value>5ca1aba9eb05490f84b66bf9bbe4cc10</value>
       </setting>
       <setting name="DownloadPath" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="MapPinHeight" serializeAs="String">
         <value>30</value>
@@ -46,8 +46,8 @@
         <value>https://developers.arcgis.com</value>
       </setting>
       <setting name="OAuthRefreshToken" serializeAs="String">
-        <value/>
+        <value />
       </setting>
     </OfflineMapBook.Properties.Settings>
   </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup></configuration>
