Update Offline Mapbook (WPF) for 100.5 release

--- a/OfflineMapBook/OfflineMapBook/packages.config
+++ b/OfflineMapBook/OfflineMapBook/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Esri.ArcGISRuntime" version="100.5.0-daily2342" targetFramework="net461" />
   <package id="Esri.ArcGISRuntime.Toolkit" version="100.4.0" targetFramework="net461" />
   <package id="Esri.ArcGISRuntime.Toolkit.Preview" version="100.4.0" targetFramework="net461" />
-  <package id="Esri.ArcGISRuntime.WPF" version="100.5.0-daily2342" targetFramework="net461" />
+  <package id="Esri.ArcGISRuntime.WPF" version="100.5.0" targetFramework="net461" />
 </packages>
