--- a/OfflineMapBook/OfflineMapBook/OfflineMapBook.csproj
+++ b/OfflineMapBook/OfflineMapBook/OfflineMapBook.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{39DE280E-2709-4C05-8F0C-01F8774D73C7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>OfflineMapBook</RootNamespace>
-    <AssemblyName>OfflineMapBook</AssemblyName>
+    <RootNamespace>Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook</RootNamespace>
+    <AssemblyName>Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -53,7 +53,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>OfflineMapBook.App</StartupObject>
+    <StartupObject>Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.App</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>false</SignManifests>
