--- a/OfflineMapBook/OfflineMapBook/Properties/Settings.settings
+++ b/OfflineMapBook/OfflineMapBook/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="OfflineMapBook.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="MmpkDownloadDate" Type="System.DateTime" Scope="User">
