--- a/OfflineMapBook/OfflineMapBook/OfflineMapBook (.NET Core).csproj
+++ b/OfflineMapBook/OfflineMapBook/OfflineMapBook (.NET Core).csproj
@@ -10,6 +10,8 @@
     <DefineConstants>WPF;NET_CORE</DefineConstants>
     <DefaultItemExcludes>$(DefaultItemExcludes);netframework\**;obj\**;netcore\**;out\**</DefaultItemExcludes>
     <ApplicationIcon>Resources\ArcGIS_Open_Source_Apps.ico</ApplicationIcon>
+    <NoWarn>67</NoWarn>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -39,10 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Esri.ArcGISRuntime.Toolkit">
-      <Version>100.4.0</Version>
+      <Version>100.7.0</Version>
     </PackageReference>
     <PackageReference Include="Esri.ArcGISRuntime.Toolkit.Preview">
-      <Version>100.4.0</Version>
+      <Version>100.7.0</Version>
     </PackageReference>
     <PackageReference Include="Esri.ArcGISRuntime.WPF">
       <Version>100.7.0</Version>
