Set version for release in csproj

--- a/OfflineMapBook/OfflineMapBook/OfflineMapBook (.NET Core).csproj
+++ b/OfflineMapBook/OfflineMapBook/OfflineMapBook (.NET Core).csproj
@@ -12,6 +12,10 @@
     <ApplicationIcon>Resources\ArcGIS_Open_Source_Apps.ico</ApplicationIcon>
     <NoWarn>67</NoWarn>
     <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+    <Version>1.0.3</Version>
+    <Authors />
+    <Company>Esri</Company>
+    <Product>Open Source Apps</Product>
   </PropertyGroup>
 
   <ItemGroup>
