--- a/OfflineMapBook/OfflineMapBook/OfflineMapBook.csproj
+++ b/OfflineMapBook/OfflineMapBook/OfflineMapBook.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Converters\BooleanToVisibilityInverseConverter.cs" />
     <Compile Include="Converters\CountToVisibilityConverter.cs" />
     <Compile Include="Models\IdentifyModel.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
