--- a/OfflineMapBook/OfflineMapBook/OfflineMapBook (.NET Core).csproj
+++ b/OfflineMapBook/OfflineMapBook/OfflineMapBook (.NET Core).csproj
@@ -12,6 +12,7 @@
     <ApplicationIcon>Resources\ArcGIS_Open_Source_Apps.ico</ApplicationIcon>
     <NoWarn>67</NoWarn>
     <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+    <ReleaseVersion>1.0.4</ReleaseVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -48,43 +49,31 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Esri.ArcGISRuntime.Toolkit">
-      <Version>100.8.0</Version>
+    <PackageReference Include="Esri.ArcGISRuntime.Toolkit" Version="100.8.0">
     </PackageReference>
-    <PackageReference Include="Esri.ArcGISRuntime.Toolkit.Preview">
-      <Version>100.8.0</Version>
+    <PackageReference Include="Esri.ArcGISRuntime.Toolkit.Preview" Version="100.8.0">
     </PackageReference>
-    <PackageReference Include="Esri.ArcGISRuntime.WPF">
-      <Version>100.8.0</Version>
+    <PackageReference Include="Esri.ArcGISRuntime.WPF" Version="100.8.0">
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\BackTransparent.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\BookmarkTransparent.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\ClearTransparent.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\CloseTransparent.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\LeftTransparent.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\MapPin.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\RightTransparent.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\SearchTransparent.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\TocTransparent.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
