--- a/OfflineMapBook/OfflineMapBook_NetFramework/app.config
+++ b/OfflineMapBook/OfflineMapBook_NetFramework/app.config
@@ -22,7 +22,7 @@
         <value>OfflineMapbookTest.mmpk</value>
       </setting>
       <setting name="PortalUri" serializeAs="String">
-        <value>http://runtime.maps.arcgis.com/sharing/rest</value>
+        <value>https://runtime.maps.arcgis.com/sharing/rest</value>
       </setting>
       <setting name="PortalItemID" serializeAs="String">
         <value>b5d32c90c9384187b4b8f041bd698c42</value>
