--- a/OfflineMapBook/OfflineMapBook_NetFramework/OfflineMapBook_NetFramework.csproj
+++ b/OfflineMapBook/OfflineMapBook_NetFramework/OfflineMapBook_NetFramework.csproj
@@ -166,6 +166,9 @@
     <Resource Include="Resources\ArcGIS_Open_Source_Apps.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Esri.ArcGISRuntime">
+      <Version>100.9.0</Version>
+    </PackageReference>
     <PackageReference Include="Esri.ArcGISRuntime.Toolkit">
       <Version>100.9.0</Version>
     </PackageReference>
