--- a/OfflineMapBook/OfflineMapBook_NetFramework/OfflineMapBook_NetFramework.csproj
+++ b/OfflineMapBook/OfflineMapBook_NetFramework/OfflineMapBook_NetFramework.csproj
@@ -16,7 +16,7 @@
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
     <NoWarn>67</NoWarn>
-    <ReleaseVersion>1.0.6</ReleaseVersion>
+    <ReleaseVersion>1.0.7</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -166,6 +166,9 @@
     <Resource Include="Resources\ArcGIS_Open_Source_Apps.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Esri.ArcGISRuntime">
+      <Version>100.9.0</Version>
+    </PackageReference>
     <PackageReference Include="Esri.ArcGISRuntime.Toolkit">
       <Version>100.9.0</Version>
     </PackageReference>
